SUBDIRS = countries display fonts extensions keymaps skin_default skin_fallback_1080 VirtualKeyBoard_Icons

dist_pkgdata_DATA = \
	black.mvi \
	encoding.conf \
	freesat.t1 \
	freesat.t2 \
	groupedservices \
	keymap.xml \
	menu.xml \
	otv_00820000_fbff_16a8.dict \
	otv_011a0000_0002_07d4.dict \
	otv_06180000_1000_0011.dict \
	otv_06400000_00a9_0003.dict \
	radio.mvi \
	setup.xml \
	skin_subtitles.xml \
	startwizard.xml
