installdir = $(pkgdatadir)/display/skin_default
dist_install_DATA = txt.png stop.png slow.png rec.png play.png pause.png hd.png forward.png format.png dolby.png crypt.png backward.png 

datainstalldir = $(pkgdatadir)/display
dist_datainstall_DATA = skin_display.xml skin_display_picon.xml prev.png piconprev.png
